cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_04978_kubernetes.json
{
  "AWSTemplateFormatVersion":"2010-09-09",
  "Description":"Kubernetes CloudFormation stack.",
  "Metadata":{
    "AWS::CloudFormation::Interface":{
      "ParameterGroups":[{
        "Label":{"default":"Main configuration"},
        "Parameters":["Environment","SSHPublicKey"]
      }],
      "ParameterLabels":{
        "Environment":{"default":"Environment"},
        "SSHPublicKey":{"default":"SSH public key"}
      }
    }
  },
  "Parameters":{
    "Environment":{
      "Type":"String",
      "Default":"prd",
      "AllowedValues":["prd","stg"],
      "Description":"Enter environment name."
    },
    "SSHPublicKey":{
      "Type":"String",
      "Description":"Enter SSH public key content."
    }
  },
  "Conditions":{
    "IsPRD":{"Fn::Equals":[{"Ref":"Environment"},"prd"]}
  },
  "Resources":{
    "KubernetesIAMEC2RL":{
      "Type":"AWS::IAM::Role",
      "Properties":{
        "RoleName":"kubernetes-iam-ec2-rl",
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[{
            "Effect":"Allow",
            "Principal":{
              "Service":"ec2.amazonaws.com"
            },
            "Action":"sts:AssumeRole"
          }]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly",
          "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy",
          "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
        ],
        "Path":"/",
        "Tags":[
          {"Key":"Name","Value":"kubernetes-iam-ec2-rl"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesIAMEC2RLINSTPF":{
      "Type":"AWS::IAM::InstanceProfile",
      "DependsOn":["KubernetesIAMEC2RL"],
      "Properties":{
        "InstanceProfileName":"kubernetes-iam-ec2-rl-inst-pf",
        "Roles":[{"Ref":"KubernetesIAMEC2RL"}],
        "Path":"/"
      }
    },
    "KubernetesIAMEKSRL":{
      "Type":"AWS::IAM::Role",
      "Properties":{
        "RoleName":"kubernetes-iam-eks-rl",
        "AssumeRolePolicyDocument":{
          "Version":"2012-10-17",
          "Statement":[{
            "Effect":"Allow",
            "Principal":{
              "Service":"eks.amazonaws.com"
            },
            "Action":"sts:AssumeRole"
          }]
        },
        "ManagedPolicyArns":[
          "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
        ],
        "Path":"/",
        "Tags":[
          {"Key":"Name","Value":"kubernetes-iam-eks-rl"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesIAMEKSRLINSTPF":{
      "Type":"AWS::IAM::InstanceProfile",
      "DependsOn":["KubernetesIAMEKSRL"],
      "Properties":{
        "InstanceProfileName":"kubernetes-iam-eks-rl-inst-pf",
        "Roles":[{"Ref":"KubernetesIAMEKSRL"}],
        "Path":"/"
      }
    },
    "KubernetesVPCNET":{
      "Type":"AWS::EC2::VPC",
      "Properties":{
        "CidrBlock":{"Fn::If":["IsPRD","11.11.0.0/16","12.11.0.0/16"]},
        "EnableDnsSupport":true,
        "EnableDnsHostnames":true,
        "InstanceTenancy":"default",
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-net"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCIG":{
      "Type":"AWS::EC2::InternetGateway",
      "Properties":{
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-ig"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCIGATT":{
      "Type":"AWS::EC2::VPCGatewayAttachment",
      "DependsOn":[
        "KubernetesVPCNET",
        "KubernetesVPCIG"
      ],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "InternetGatewayId":{"Ref":"KubernetesVPCIG"}
      }
    },
    "KubernetesVPCPUBRTT":{
      "Type":"AWS::EC2::RouteTable",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-pub-rtt"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCPUBRTTRT1":{
      "Type":"AWS::EC2::Route",
      "DependsOn":[
        "KubernetesVPCIG",
        "KubernetesVPCIGATT",
        "KubernetesVPCPUBRTT"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"KubernetesVPCIG"}
      }
    },
    "KubernetesVPCPVTRTT":{
      "Type":"AWS::EC2::RouteTable",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-pvt-rtt"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCPVTRTTRT1":{
      "Type":"AWS::EC2::Route",
      "DependsOn":[
        "KubernetesVPCNG",
        "KubernetesVPCPVTRTT"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPVTRTT"},
        "DestinationCidrBlock":"0.0.0.0/0",
        "GatewayId":{"Ref":"KubernetesVPCNG"}
      }
    },
    "KubernetesVPCBastionSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.1.0/24","12.11.1.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-bastion-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCBastionSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPUBRTT",
        "KubernetesVPCBastionSN1"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "SubnetId":{"Ref":"KubernetesVPCBastionSN1"}
      }
    },
    "KubernetesVPCBastionSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.2.0/24","12.11.2.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-bastion-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCBastionSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPUBRTT",
        "KubernetesVPCBastionSN2"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "SubnetId":{"Ref":"KubernetesVPCBastionSN2"}
      }
    },
    "KubernetesVPCNATSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.3.0/24","12.11.3.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-nat-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCNATSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPUBRTT",
        "KubernetesVPCNATSN1"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "SubnetId":{"Ref":"KubernetesVPCNATSN1"}
      }
    },
    "KubernetesVPCNATSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.4.0/24","12.11.4.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-nat-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCNATSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPUBRTT",
        "KubernetesVPCNATSN2"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "SubnetId":{"Ref":"KubernetesVPCNATSN2"}
      }
    },
    "KubernetesVPCLoadbalancerSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.5.0/24","12.11.5.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-loadbalancer-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCLoadbalancerSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPUBRTT",
        "KubernetesVPCLoadbalancerSN1"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "SubnetId":{"Ref":"KubernetesVPCLoadbalancerSN1"}
      }
    },
    "KubernetesVPCLoadbalancerSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.6.0/24","12.11.6.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-loadbalancer-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCLoadbalancerSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPUBRTT",
        "KubernetesVPCLoadbalancerSN2"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPUBRTT"},
        "SubnetId":{"Ref":"KubernetesVPCLoadbalancerSN2"}
      }
    },
    "KubernetesVPCEKSCPSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.7.0/24","12.11.7.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-eks-cp-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCEKSCPSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPVTRTT",
        "KubernetesVPCEKSCPSN1"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPVTRTT"},
        "SubnetId":{"Ref":"KubernetesVPCEKSCPSN1"}
      }
    },
    "KubernetesVPCEKSCPSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.8.0/24","12.11.8.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-eks-cp-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCEKSCPSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPVTRTT",
        "KubernetesVPCEKSCPSN2"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPVTRTT"},
        "SubnetId":{"Ref":"KubernetesVPCEKSCPSN2"}
      }
    },
    "KubernetesVPCEKSNDSN1":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.9.0/24","12.11.9.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"a"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-eks-nd-sn-1"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCEKSNDSN1RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPVTRTT",
        "KubernetesVPCEKSNDSN1"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPVTRTT"},
        "SubnetId":{"Ref":"KubernetesVPCEKSNDSN1"}
      }
    },
    "KubernetesVPCEKSNDSN2":{
      "Type":"AWS::EC2::Subnet",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "CidrBlock":{"Fn::If":["IsPRD","11.11.10.0/24","12.11.10.0/24"]},
        "AvailabilityZone":{"Fn::Join":["",[{"Ref":"AWS::Region"},"b"]]},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-eks-nd-sn-2"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCEKSNDSN2RTTASS":{
      "Type":"AWS::EC2::SubnetRouteTableAssociation",
      "DependsOn":[
        "KubernetesVPCPVTRTT",
        "KubernetesVPCEKSNDSN2"
      ],
      "Properties":{
        "RouteTableId":{"Ref":"KubernetesVPCPVTRTT"},
        "SubnetId":{"Ref":"KubernetesVPCEKSNDSN2"}
      }
    },
    "KubernetesVPCNATEIP":{
      "Type":"AWS::EC2::EIP",
      "Properties":{
        "NetworkBorderGroup":{"Ref":"AWS::Region"},
        "PublicIpv4Pool":"amazon",
        "Domain":"vpc",
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-nat-eip"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCNG":{
      "Type":"AWS::EC2::NatGateway",
      "DependsOn":[
        "KubernetesVPCNATSN2",
        "KubernetesVPCNATEIP"
      ],
      "Properties":{
        "SubnetId":{"Ref":"KubernetesVPCNATSN2"},
        "AllocationId":{"Fn::GetAtt":["KubernetesVPCNATEIP","AllocationId"]},
        "ConnectivityType":"public",
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-ng"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCBastionSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "GroupName":"kubernetes-vpc-bastion-sg",
        "GroupDescription":"Kubernetes VPC bastion security group.",
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-bastion-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCNATSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "GroupName":"kubernetes-vpc-nat-sg",
        "GroupDescription":"Kubernetes VPC NAT security group.",
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"-1","CidrIp":{"Fn::If":["IsPRD","11.11.0.0/16","12.11.0.0/16"]}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-nat-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCLoadbalancerSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "GroupName":"kubernetes-vpc-loadbalancer-sg",
        "GroupDescription":"Kubernetes VPC loadbalancer security group.",
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":80,"ToPort":80,"CidrIp":"0.0.0.0/0"}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-loadbalancer-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCEKSSG":{
      "Type":"AWS::EC2::SecurityGroup",
      "DependsOn":["KubernetesVPCNET"],
      "Properties":{
        "GroupName":"kubernetes-vpc-eks-sg",
        "GroupDescription":"Kubernetes VPC EKS security group.",
        "VpcId":{"Ref":"KubernetesVPCNET"},
        "SecurityGroupIngress":[
          {"IpProtocol":"tcp","FromPort":22,"ToPort":22,"SourceSecurityGroupId":{"Ref":"KubernetesVPCBastionSG"}}
        ],
        "SecurityGroupEgress":[
          {"IpProtocol":"-1","CidrIp":"0.0.0.0/0"}
        ],
        "Tags":[
          {"Key":"Name","Value":"kubernetes-vpc-eks-sg"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesVPCEKSSGIN1":{
      "Type":"AWS::EC2::SecurityGroupIngress",
      "DependsOn":["KubernetesVPCEKSSG"],
      "Properties":{
        "IpProtocol":"-1",
        "GroupId":{"Ref":"KubernetesVPCEKSSG"},
        "SourceSecurityGroupId":{"Ref":"KubernetesVPCEKSSG"}
      }
    },
    "KubernetesEC2KeyPair":{
      "Type":"AWS::EC2::KeyPair",
      "Properties":{
        "KeyName":"kubernetes-ec2-key-pair",
        "KeyType":"rsa",
        "PublicKeyMaterial":{"Ref":"SSHPublicKey"},
        "Tags":[
          {"Key":"Name","Value":"kubernetes-ec2-key-pair"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesECRRedisREPO":{
      "Type":"AWS::ECR::Repository",
      "Properties":{
        "RepositoryName":"sloopstash/redis",
        "ImageTagMutability":"MUTABLE",
        "ImageScanningConfiguration":{
          "ScanOnPush":false
        },
        "EncryptionConfiguration":{
          "EncryptionType":"AES256"
        },
        "EmptyOnDelete":true,
        "Tags":[
          {"Key":"Name","Value":"kubernetes-ecr-redis-repo"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesECRPythonREPO":{
      "Type":"AWS::ECR::Repository",
      "Properties":{
        "RepositoryName":"sloopstash/python",
        "ImageTagMutability":"MUTABLE",
        "ImageScanningConfiguration":{
          "ScanOnPush":false
        },
        "EncryptionConfiguration":{
          "EncryptionType":"AES256"
        },
        "EmptyOnDelete":true,
        "Tags":[
          {"Key":"Name","Value":"kubernetes-ecr-python-repo"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesECRNginxREPO":{
      "Type":"AWS::ECR::Repository",
      "Properties":{
        "RepositoryName":"sloopstash/nginx",
        "ImageTagMutability":"MUTABLE",
        "ImageScanningConfiguration":{
          "ScanOnPush":false
        },
        "EncryptionConfiguration":{
          "EncryptionType":"AES256"
        },
        "EmptyOnDelete":true,
        "Tags":[
          {"Key":"Name","Value":"kubernetes-ecr-nginx-repo"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesEKSCT":{
      "Type":"AWS::EKS::Cluster",
      "DependsOn":[
        "KubernetesIAMEKSRL",
        "KubernetesVPCEKSCPSN1",
        "KubernetesVPCEKSCPSN2",
        "KubernetesVPCEKSNDSN1",
        "KubernetesVPCEKSNDSN2",
        "KubernetesVPCEKSSG"
      ],
      "Properties":{
        "Name":"kubernetes-eks-ct",
        "RoleArn":{"Fn::GetAtt":["KubernetesIAMEKSRL","Arn"]},
        "ResourcesVpcConfig":{
          "EndpointPrivateAccess":true,
          "EndpointPublicAccess":true,
          "SubnetIds":[
            {"Ref":"KubernetesVPCEKSCPSN1"},
            {"Ref":"KubernetesVPCEKSCPSN2"},
            {"Ref":"KubernetesVPCEKSNDSN1"},
            {"Ref":"KubernetesVPCEKSNDSN2"}
          ],
          "SecurityGroupIds":[{"Ref":"KubernetesVPCEKSSG"}]
        },
        "Version":"1.29",
        "AccessConfig":{
          "AuthenticationMode":"API_AND_CONFIG_MAP",
          "BootstrapClusterCreatorAdminPermissions":true
        },
        "BootstrapSelfManagedAddons":true,
        "KubernetesNetworkConfig":{
          "ElasticLoadBalancing":{
            "Enabled":false
          },
          "IpFamily":"ipv4"
        },
        "StorageConfig":{
          "BlockStorage":{
            "Enabled":false
          }
        },
        "ComputeConfig":{
          "Enabled":false
        },
        "ZonalShiftConfig":{
          "Enabled":false
        },
        "Tags":[
          {"Key":"Name","Value":"kubernetes-eks-ct"},
          {"Key":"Environment","Value":{"Ref":"Environment"}},
          {"Key":"Stack","Value":"kubernetes"},
          {"Key":"Region","Value":{"Ref":"AWS::Region"}},
          {"Key":"Organization","Value":"sloopstash"}
        ]
      }
    },
    "KubernetesEKSGNRNG":{
      "Type":"AWS::EKS::Nodegroup",
      "DependsOn":[
        "KubernetesIAMEC2RL",
        "KubernetesVPCEKSNDSN1",
        "KubernetesVPCEKSNDSN2",
        "KubernetesVPCBastionSG",
        "KubernetesEC2KeyPair",
        "KubernetesEKSCT"
      ],
      "Properties":{
        "NodegroupName":"kubernetes-eks-gnr-ng",
        "ClusterName":{"Ref":"KubernetesEKSCT"},
        "NodeRole":{"Fn::GetAtt":["KubernetesIAMEC2RL","Arn"]},
        "Subnets":[
          {"Ref":"KubernetesVPCEKSNDSN1"},
          {"Ref":"KubernetesVPCEKSNDSN2"}
        ],
        "Version":"1.29",
        "AmiType":"AL2_x86_64",
        "CapacityType":"ON_DEMAND",
        "InstanceTypes":["t3a.small"],
        "DiskSize":8,
        "ForceUpdateEnabled":true,
        "RemoteAccess":{
          "Ec2SshKey":{"Ref":"KubernetesEC2KeyPair"},
          "SourceSecurityGroups":[{"Ref":"KubernetesVPCBastionSG"}]
        },
        "UpdateConfig":{
          "MaxUnavailablePercentage":30
        },
        "ScalingConfig":{
          "DesiredSize":1,
          "MaxSize":1,
          "MinSize":1
        },
        "Tags":{
          "Name":"kubernetes-eks-gnr-ng",
          "Environment":{"Ref":"Environment"},
          "Stack":"kubernetes",
          "Region":{"Ref":"AWS::Region"},
          "Organization":"sloopstash"
        }
      }
    }
  },
  "Outputs":{
    "KubernetesEKSCTEndpoint":{
      "Value":{"Fn::GetAtt":["KubernetesEKSCT","Endpoint"]}
    }
  }
}
